// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadButton renders custom class names 1`] = `
<MultipleFileUploadButton
  className="test"
>
  <div
    className="pf-c-multiple-file-upload__upload test"
  >
    <Button
      onClick={[Function]}
      variant="secondary"
    >
      <ButtonBase
        innerRef={null}
        onClick={[Function]}
        variant="secondary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          Upload
        </button>
      </ButtonBase>
    </Button>
  </div>
</MultipleFileUploadButton>
`;

exports[`MultipleFileUploadButton renders with aria-label applied to the button 1`] = `
<MultipleFileUploadButton
  aria-label="test"
>
  <div
    className="pf-c-multiple-file-upload__upload"
  >
    <Button
      aria-label="test"
      onClick={[Function]}
      variant="secondary"
    >
      <ButtonBase
        aria-label="test"
        innerRef={null}
        onClick={[Function]}
        variant="secondary"
      >
        <button
          aria-disabled={false}
          aria-label="test"
          className="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          Upload
        </button>
      </ButtonBase>
    </Button>
  </div>
</MultipleFileUploadButton>
`;

exports[`MultipleFileUploadButton renders with expected class names 1`] = `
<MultipleFileUploadButton>
  <div
    className="pf-c-multiple-file-upload__upload"
  >
    <Button
      onClick={[Function]}
      variant="secondary"
    >
      <ButtonBase
        innerRef={null}
        onClick={[Function]}
        variant="secondary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[Function]}
          role={null}
          type="button"
        >
          Upload
        </button>
      </ButtonBase>
    </Button>
  </div>
</MultipleFileUploadButton>
`;
